Updating show page for lenders

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,8 +17,8 @@
     <th>Action</th>
   </tr>
   <% @help.each do |h| %>
-    <% h.histories.each do |lend| %>
-    <% end %>
+    <%# h.histories.each do |lend| %>
+    <%# end %>
   <tr>
     <td><%= h.first_name %> <%= h.last_name %></td>
     <td><%= h.purpose %></td>
