Added Materialize SASS

--- a/app/views/borrowers/show.html.erb
+++ b/app/views/borrowers/show.html.erb
@@ -3,8 +3,8 @@
 <p>Amount Needed: $<%= @borrower.needed %></p>
 <p>Amount Raised: $<%= @borrower.raised %></p>
 
-<h3>List of people who lend you money: </h3>
-<table border="1">
+<h4>List of people who lend you money: </h4>
+<table class="striped">
   <tr>
     <th>Name</th>
     <th>Email</th>
