Fixed: multiple lenders donating to the same borrower would create another field in the table on the lender show page...Problem solved: added the amounts together when outputting to the table

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
               <option><%= mon %></option>
               <% end %>
             </select>
-            <input type="submit" value="Register">
+            <input type="submit" value="Register Lender" class="waves-effect waves-light btn">
           </fieldset>
         </div>
     </div>
@@ -50,7 +50,7 @@
                <option><%= mon %></option>
                <% end %>
              </select>
-             <input type="submit" value="Register">
+             <input type="submit" value="Register Borrower" class="waves-effect waves-light btn">
            </fieldset>
        </div>
     </div>
