Fixed: total of money lent show correctly on both users and borrowers show pages, added functionality to not display amount to be lent if the borrower doesn't need any more money and lender can't loan if they don't have any money

--- a/app/views/borrowers/show.html.erb
+++ b/app/views/borrowers/show.html.erb
@@ -10,15 +10,13 @@
     <th>Email</th>
     <th>Amount Lent</th>
   </tr>
-  <% @borrow.each do |money| %>
-    <% if money.id == session[:user_id] %>
-   <% money.lenders.each do |lender|%>
-  <tr>
-    <td><%= lender.first_name %> <%= lender.last_name %></td>
-    <td><%= lender.email %></td>
-    <td><%= lender.money %></td>
-  </tr>
-      <% end %>
+    <% @lend.each do |person| %>
+      <% if person.borrower_id == session[:user_id] %>
+        <tr>
+          <td><%= person.first_name %> <%= person.last_name %></td>
+          <td><%= person.email %></td>
+          <td><%= person.amount %></td>
+        </tr>
     <% end %>
   <% end %>
 </table>
