--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
-@import "materialize/components/color";
+@import "materialize/components/color-variables";
 $primary-color: color("blue", "lighten-2") !default;
-@import "materialize";
+$secondary-color: color("yellow", "base") !default;
+@import 'materialize';
